<resources>
    <string name="app_name">FAFIJ</string>
    <string name="login_hint">Логин</string>
    <string name="login_enter">Войти</string>
    <string name="login_password">Пароль</string>
    <string name="login_registration">Регистрация</string>
    <string name="journal_change_name">Название:</string>
    <string name="journal_change_logins">Участники:</string>
    <string name="add_journal">Добавить журнал</string>
    <string name="journal_name">Название журнала</string>
    <string name="addjournal">Создать журнал</string>
    <string name="journal">Журнал</string>
    <string name="categories">Категории</string>
    <string name="infographics">Инфографика</string>
    <string name="settings">Настройки</string>
    <string name="change_journal">Сменить журнал</string>
    <string name="add_user">Пригласить пользователя</string>
    <string name="invitations">Приглашения</string>
    <string name="exit">Выход</string>
    <string name="user_login">Логин пользователя</string>
    <string name="adult">Adult</string>
    <string name="kid">Kid</string>
    <string name="choose_role">Выберете будущую роль пользователя:</string>
    <string name="role">Роль:</string>
    <string name="accept">Принять</string>
    <string name="refuse">Отказаться</string>
    <string name="category">Категория:</string>
    <string name="delete">Удалить</string>
    <string name="add_category">Создать новую категорию</string>
    <string name="category_name">Название категории</string>
    <string name="sum">Сумма:</string>
    <string name="comment">Комментарий:</string>
    <string name="edit">Редактировать</string>
    <string name="add_note">Добавить новую запись</string>
    <string name="id_note">id записи:</string>
    <string name="date_note">Дата записи:</string>
    <string name="money_sum">Денежная сумма</string>
    <string name="category_hint">Категория</string>
    <string name="comment_hint">Комментарий</string>
    <string name="choose">Выбрать</string>
    <string name="current_journal">Текущий журнал:\u0020</string>
    <string name="current_login">Текущий пользователь:\u0020</string>
    <string name="qr">Имитация сканирования QR-кода</string>
    <string name="check_sum">Сумма в чеке:\u0020</string>
</resources>