<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.invitations.InvitationsActivity">

    <EditText
        android:id="@+id/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/standard_edittext_style"
        android:hint="@string/user_login"
        android:singleLine="true"
        android:textSize="18sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_role"
        android:layout_margin="10dp"/>
    <RadioGroup
        android:id="@+id/radio_buttons_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <RadioButton
            android:id="@+id/adult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adult"/>

        <RadioButton
            android:id="@+id/kid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kid"/>
    </RadioGroup>

    <Button
        android:id="@+id/invite_button"
        android:onClick="sendInvitation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_user"
        android:layout_margin="10dp"
        android:background="@drawable/standard_button_style"/>
</androidx.appcompat.widget.LinearLayoutCompat>