<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/id_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="11sp"
                android:visibility="gone"
                android:text="@string/id_note"/>
            <TextView
                android:id="@+id/date_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="11sp"
                android:text="@string/date_note"/>
            <TextView
                android:id="@+id/sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="30sp"
                android:text="@string/sum"/>
            <TextView
                android:id="@+id/note_category_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/category"/>
            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/comment"/>
            <LinearLayout
                android:id="@+id/linearLayout"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <Button
                    android:id="@+id/note_edit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:background="@drawable/standard_button_style"/>
                <Button
                    android:id="@+id/note_delete_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:background="@drawable/standard_button_style"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/delete" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>